fixed hover border on mobile view

--- a/chamber/assets/styles/general_small.css
+++ b/chamber/assets/styles/general_small.css
@@ -48,6 +48,10 @@
     grid-template-columns: 1fr;
   }
 
+  .pictures img:hover{
+    border: none;
+  }
+
   .footerGrid {
     grid-template-columns: 1fr;
   }
